Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56526

Qt/5.8, XCB/Unity: Application startup crash in Gtk3 platform theme

    XMLWordPrintable

Details

    • 063997f44ffc1b6650ef6d67832674d5511fdb63

    Description

      Opening creator/assistant/designer still fails with #519 No xcb issues anymore, just

      ~/Qt5.8.0-beta_519/Tools/QtCreator/bin$ ./qtcreator
      qt.network.ssl: QSslSocket: cannot resolve SSLv2_client_method
      qt.network.ssl: QSslSocket: cannot resolve SSLv2_server_method
      Segmentation fault (core dumped)

      and

      ~/Qt5.8.0-beta_519/5.8/gcc_64/bin$ assistant
      assistant: could not exec '/usr/lib/x86_64-linux-gnu/qt4/bin/assistant': No such file or directory
      jaheikki3@jaheikki3-ThinkCentre-M93p:~/Qt5.8.0-beta_519/5.8/gcc_64/bin$ ./assistant
      Segmentation fault (core dumped)

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              Unassigned Unassigned
              janihe Jani Heikkinen
              Votes:
              0 Vote for this issue
              Watchers:
              12 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes